--- a/public/ajaj.html
+++ b/public/ajaj.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
 </head>
 
 <body>
@@ -16,10 +17,7 @@
     <h1>JQuery Ajax Tutorial</h1>
 
     <h2>Coffee Orders</h2>
-    <ul id="orders">
-      <li>Name: John, Drink: Coffee</li>
-      <li>Name: John, Drink: Coffee</li>
-    </ul>
+    <ul id="orders"></ul>
 
     <h4>Add a Coffee Order</h4>
     <p>name: <input type="text" id="name"></p>
@@ -30,10 +28,70 @@
   <script>
 
   $(document).ready(function() {
+    var $orders = $('#orders');
+    var $name = $('#name');
+    var $drink = $('#drink');
+    var orderTemplate = "" +
+    "<li>" +
+    "<p>name: {{name}}</p>" +
+    "<p>drink: {{drink}}</p>" +
+    "<button data-id='{{_id}}' class='remove'>X</btton>" +
+    "</li>";
+
+    function addOrder(order) {
+        //$orders.append('<li>name:' + order.name + ', drink:' + order.drink + '</li>');
+        $orders.append(Mustache.render(orderTemplate, order));
+    }
+
+    $.ajax({
+      type: 'GET',
+      url: 'http://localhost:3000/orders',
+      success: function(orders) {
+        $.each(orders, function(i, order){
+          addOrder(order);
+        });
+      },
+      error: function() {
+        alert('error loading orders');
+      },
+    });
+
+    $('#add-order').on('click', function() {
+
+      var order = {
+        name: $name.val(),
+        drink: $drink.val(),
+      };
+
+      $.ajax({
+        type: 'POST',
+        url: 'http://localhost:3000/orders',
+        data: order,
+        success: function(newOrder) {
+          console.log('from post');
+          addOrder(newOrder);
+        },
+        error: function() {
+          alert('error saving order');
+        },
+      });
+    });
+
+    $orders.delegate('.remove', 'click', function() {
+      var $li = $(this).closest('li');
+
+      $.ajax({
+        type: 'DELETE',
+        url: 'http://localhost:3000/orders/' + $(this).attr('data-id'),
+        success: function() {
+          $li.fadeOut(300, function() {
+            $(this).remove();
+          });
+        },
+      });
+    });
 
   });
-
-
 
   </script>
  </body>
