added static home,chart,data.html

--- a/public/data.html
+++ b/public/data.html
@@ -1,8 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-{{> header}}
+
+<div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Pervasive</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><a href="home">Home</a></li>
+        <li><a href="data">Data</a></li>
+        <li><a href="chart">Chart</a></li>
+        <li><a href="historical">Light History</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
 <body>
-  {{> navbar}}
+
+  <div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Pervasive</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="data">Data</a></li>
+          <li><a href="chart">Chart</a></li>
+          <li><a href="historical">Light History</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
   <div class="jumbotron text-center">
     <h1>Data</h1>
     <p>Data from IoT Device</p>
