fixed static html pages

--- a/public/chart.html
+++ b/public/chart.html
@@ -19,10 +19,10 @@
           <a class="navbar-brand" href="#">Pervasive</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="home">Home</a></li>
-          <li><a href="data">Data</a></li>
-          <li><a href="chart">Chart</a></li>
-          <li><a href="historical">Light History</a></li>
+          <li><a href="/home.html">Home</a></li>
+          <li><a href="/data.html">Data</a></li>
+          <li><a href="/chart.html">Chart</a></li>
+          <li><a href="/historical.html">Light History</a></li>
         </ul>
       </div>
     </nav>
