--- a/public/data.html
+++ b/public/data.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<div>
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Pervasive</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li><a href="home">Home</a></li>
-        <li><a href="data">Data</a></li>
-        <li><a href="chart">Chart</a></li>
-        <li><a href="historical">Light History</a></li>
-      </ul>
-    </div>
-  </nav>
-</div>
+<head>
+  <title>Pervasive</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/mystyle.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 
 <body>
 
@@ -26,10 +20,10 @@
           <a class="navbar-brand" href="#">Pervasive</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="data">Data</a></li>
-          <li><a href="chart">Chart</a></li>
-          <li><a href="historical">Light History</a></li>
+          <li><a href="/home.html">Home</a></li>
+          <li><a href="/data.html">Data</a></li>
+          <li><a href="/chart.html">Chart</a></li>
+
         </ul>
       </div>
     </nav>
